Lazy loading, sizing fixes, Clippies additions

--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,9 @@ a {
 }
 
 .work-description {
-    width: 90%;
+    width: 50%;
     margin-top: 6vh;
-    margin-left: 2vw;
+    margin-bottom: 4vh;
     margin-right: 2vw;
     display: block;
     font-family: "area-normal", sans-serif;
@@ -74,10 +74,24 @@ a {
     font-size: 9pt;
 }
 
+/* When just displaying everything as a single column */
 .work-container img {
-    width: 100%;
+    width: 70%;
     object-fit: cover;
-    margin-top: 4vh;
+    margin-bottom: 1vh;
+}
+
+.grid-row {
+    margin-right: 2vw;
+    display: grid;
+    gap: 2vw;
+    margin-bottom: 2vw;
+}
+
+.grid-row > img {
+    width: 100%;
+    height: 30vw;
+    object-fit: cover;
 }
 
 #home-container {
@@ -86,7 +100,7 @@ a {
 
 #page-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
 }
 
 #main_header {
@@ -149,7 +163,6 @@ footer {
     }
 
     .work-description {
-        order: -1;
         width: 98%;
         margin-left: 0;
     }
@@ -190,6 +203,20 @@ footer {
 
     .thumbnail-container img:hover {
         border-radius: 4em;
+    }
+
+    /* Override the custom inline styles so we can reuse the same classes for the other page galleries */
+    .grid-row {
+        grid-template-columns: auto !important;
+    }
+
+    .grid-row img {
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    #ad-mockup {
+        height: 400px;
     }
 }
 
